--- a/calendario.html
+++ b/calendario.html
@@ -2,9 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Calendario</title>
+    <script src="main.js"></script>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-
+    <h1>
+      <div><p>Hola</p>
+    </h1>
   </body>
 </html>
