--- a/calendario.html
+++ b/calendario.html
@@ -1,14 +1,15 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Calendario</title>
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1>
       <div><p>Hola</p>
+        <h1>2019</h1>
     </h1>
   </body>
 </html>
